Card 269: a write that changes nothing says so
write_file now states the difference it made — created, changed with the
size delta, or unchanged when the bytes are byte-identical to the file
that was already there. edit_file says the same for a replacement that
produces identical content, and keeps that apart from its existing
"nothing to replace" error: found-and-put-back is different news from
found-nothing.

The word is a FIELD on the recorded tool_result (additive, absent for
every tool that touched no file and on every older session), and the
rendered line follows it. The card, the trace body and the HTML export
read the field, never the sentence — "unchanged" contains "changed", and
a substring pin on prose reads the fact backwards. One of my own guards
did exactly that before it was sharpened onto the field.

Cheap by construction: the existing content is read at most once, and not
at all when its size already proves a difference. A file that cannot be
read yields no word rather than a guess — reporting "unchanged" there
would be invention, and erroring would break a write that works.

Pinned: three identical writes in a row each report unchanged and the
third never reports changed (asserted on the field); the whole chain
through the real write_file inside the loop; ToolResultFileChangeAdditivityTest
for the wire, covering BOTH legacy arities after a bite found the pre-269
constructor pinned by nothing.

The componentReach drift guard for this seam had outgrown its premise:
the describeTool call is no longer one line, so its slice silently read
the empty string. Replaced with a balanced-paren read that demands both
props.detail and props.fileChange, and extended to the export.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>